sort package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jest-matchers",
+  "name": "@djforth/jest-matchers",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:djforth/jest-matchers.git",
