--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "moment": "^2.17.1"
   },
   "dependencies": {
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-lodash-modularize": "^0.3.2",
     "jasmine-expect": ">=3.6.0"
   },
   "scripts": {
