--- a/.babelrc
+++ b/.babelrc
@@ -4,16 +4,17 @@
     "es2016",
     "es2017"
   ],
-  "plugins": [
-    [
-      "lodash-modularize",
-      {
-          "lodashVersion": "4.17.4"
-      }
-    ],
-    "add-module-exports"
-  ],
   "env": {
+    "production":{
+      "plugins": [
+        [
+          "lodash-modularize",
+          {
+              "lodashVersion": "4.17.4"
+          }
+        ]
+      ]
+    },
     "test": {
       "plugins": [
         [
