--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@djforth/jest-matchers",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "repository": "git@github.com:djforth/jest-matchers.git",
   "author": "Adrian Stainforth <adrian.stainforth@gmail.com>",
@@ -31,7 +31,7 @@
     "jasmine-expect": ">=3.6.0"
   },
   "scripts": {
-    "build": "babel src -x '.js' -d lib",
+    "build": "BABEL_ENV=production  babel src -x '.js' -d lib",
     "build:watch": "babel src -x '.js' -w --source-maps  -d lib",
     "lint": "eslint src/** --fix",
     "lint:tests": "eslint __tests__/** --fix",
