--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
   "name": "@djforth/jest-matchers",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "main": "index.js",
   "repository": "git@github.com:djforth/jest-matchers.git",
   "author": "Adrian Stainforth <adrian.stainforth@gmail.com>",
   "license": "MIT",
   "peerDependencies": {
     "immutable": ">=3.8.0 < 4",
-    "jest": ">=19.0.0 < 20",
+    "jest": ">=19.0.0 < 21",
     "lodash": ">=4.17.4 <5",
     "moment": ">=2.17.0 <3"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-rewire": "^1.0.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-es2016": "^6.22.0",
-    "babel-preset-es2017": "^6.22.0",
-    "eslint": "^3.16.1",
-    "eslint-config-morsedigital-jest": "^1.0.1",
+    "babel-plugin-rewire": "^1.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "eslint": "^4.0.0",
+    "eslint-config-morsedigital-jest": "2.0.0",
     "immutable": "^3.8.1",
-    "jest": "^19.0.2",
+    "jest": "^20.0.4",
     "jest-babel": "^1.0.1",
     "lodash": "^4.17.4",
-    "moment": "^2.17.1"
+    "moment": "^2.18.1"
   },
   "dependencies": {
-    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-lodash-modularize": "^0.3.2",
-    "jasmine-expect": ">=3.6.0"
+    "jasmine-expect": "^3.7.0"
   },
   "scripts": {
     "build": "BABEL_ENV=production  babel src -x '.js' -d lib",
