--- a/package.json
+++ b/package.json
@@ -1,34 +1,31 @@
 {
   "name": "@djforth/jest-matchers",
-  "version": "1.2.0",
-  "main": "index.js",
+  "version": "1.4.0",
+  "main": "lib/index.js",
   "repository": "git@github.com:djforth/jest-matchers.git",
   "author": "Adrian Stainforth <adrian.stainforth@gmail.com>",
   "license": "MIT",
-  "peerDependencies": {
-    "immutable": ">=3.8.0 < 4",
-    "jest": ">=19.0.0 < 21",
-    "lodash": ">=4.17.4 <5",
-    "moment": ">=2.17.0 <3"
+  "dependencies": {
+    "jasmine-expect": "^3.7.1"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-jest": "^21.2.0",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-rewire": "^1.1.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "eslint": "^4.0.0",
-    "eslint-config-morsedigital-jest": "2.0.0",
-    "immutable": "^3.8.1",
-    "jest": "^20.0.4",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-minify": "^0.2.0",
+    "eslint": "^4.8.0",
+    "eslint-config-morsedigital-jest": "3.0.2",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
+    "immutable": "^3.8.2",
+    "jest": "^21.2.1",
     "jest-babel": "^1.0.1",
     "lodash": "^4.17.4",
-    "moment": "^2.18.1"
-  },
-  "dependencies": {
-    "babel-plugin-lodash-modularize": "^0.3.2",
-    "jasmine-expect": "^3.7.0"
+    "moment": "^2.19.1"
   },
   "scripts": {
     "build": "BABEL_ENV=production  babel src -x '.js' -d lib",
