--- a/package.json
+++ b/package.json
@@ -1,31 +1,28 @@
 {
   "name": "@djforth/jest-matchers",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "main": "lib/index.js",
   "repository": "git@github.com:djforth/jest-matchers.git",
   "author": "Adrian Stainforth <adrian.stainforth@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "jasmine-expect": "^3.7.1"
+    "immutable": "^3.8.2",
+    "jasmine-expect": "^3.7.1",
+    "jest": "^22.1.2",
+    "jest-babel": "^1.0.1",
+    "lodash": "^4.17.4",
+    "moment": "^2.20.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-jest": "^21.2.0",
+    "babel-jest": "^22.1.0",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-rewire": "^1.1.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-minify": "^0.2.0",
-    "eslint": "^4.8.0",
-    "eslint-config-morsedigital-jest": "3.0.2",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "immutable": "^3.8.2",
-    "jest": "^21.2.1",
-    "jest-babel": "^1.0.1",
-    "lodash": "^4.17.4",
-    "moment": "^2.19.1"
+    "eslint-config-morsedigital-prettier": "^1.1.1"
   },
   "scripts": {
     "build": "BABEL_ENV=production  babel src -x '.js' -d lib",
