--- a/packages/jest-immutable-matchers/package.json
+++ b/packages/jest-immutable-matchers/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "@djforth/jest-matchers-core",
+  "name": "@djforth/jest-immutable-matchers",
   "version": "1.0.0-0",
-  "description": "helpers to create jest matchers",
+  "description": "Jest matchers for immutable JS",
   "main": "index.js",
   "repository": "https://github.com/djforth/jest-matchers",
   "author": "Adrian Stainforth",
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@djforth/jest-matchers-core": "^1.0.0-0",
+    "immutable": "^3.8.2",
     "jest": "^24.5.0"
   }
 }
