--- a/package.json
+++ b/package.json
@@ -1,32 +1,25 @@
 {
   "name": "@djforth/jest-matchers",
-  "version": "1.5.2",
+  "version": "2.0.0",
   "main": "lib/index.js",
   "repository": "git@github.com:djforth/jest-matchers.git",
   "author": "Adrian Stainforth <adrian.stainforth@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "immutable": "^3.8.2",
-    "jasmine-expect": "^3.8.3",
-    "jest": "^22.4.2",
-    "lodash": "^4.17.5",
-    "moment": "^2.20.1"
+    "jest-babel": "^1.0.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-jest": "^22.4.1",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-lodash": "^3.3.2",
-    "babel-plugin-rewire": "^1.1.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-minify": "^0.3.0",
-    "eslint-config-morsedigital-prettier": "^1.2.2"
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "core-js": "3.0.0",
+    "eslint-config-morsedigital-prettier": "^2.1.0",
+    "immutable": "^3.8.2",
+    "jest": "^24.5.0",
+    "lerna": "^3.13.1",
+    "moment": "^2.24.0"
   },
   "scripts": {
-    "build": "BABEL_ENV=production  babel src -x '.js' -d lib",
-    "build:watch": "babel src -x '.js' -w --source-maps  -d lib",
-    "lint": "eslint src/** --fix",
+    "lint": "eslint packages/** --fix",
     "lint:tests": "eslint __tests__/** --fix",
     "test": "jest --coverage --config jestConfig.json",
     "test:watch": "jest --watch --config jestConfig.json"
