--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-morsedigital-prettier": "^2.1.0",
     "immutable": "^3.8.2",
     "jest": "^24.5.0",
+    "jasmine-expect": "^4.0.1",
     "lerna": "^3.13.1",
     "moment": "^2.24.0"
   },
