--- a/packages/jest-moment-matchers/package.json
+++ b/packages/jest-moment-matchers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@djforth/jest-moment-matchers",
-  "version": "2.0.0-0",
+  "version": "2.2.0",
   "description": "Jest matchers for Moment",
   "main": "index.js",
   "repository": "jest-moment-matchers",
@@ -8,8 +8,9 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@djforth/jest-matchers-core": "^2.0.0-0",
-    "jest": "^24.5.0",
+    "@djforth/jest-matchers-core": "^2.1.0",
+    "@djforth/utilities": "^1.0.1",
+    "jest": "^24.9.0",
     "moment": "^2.24.0"
   }
 }
